lab7/redirecting/dateapi-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dateapi-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - route:
    - destination:
        host: dateapi
        subset: v2
        port:
          number: 8080
  - match:
    - uri:
        exact: "/"
    redirect:
      uri: /date
      authority: webserverv1
